--- a/contactus.html
+++ b/contactus.html
@@ -36,6 +36,7 @@
             </button>
         </div>
     </header>
+    <section class="text-gray-600 body-font relative">
         <div class="container px-5 py-24 mx-auto flex sm:flex-nowrap flex-wrap">
           <div class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative">
             <iframe width="100%" height="100%" class="absolute inset-0" frameborder="0" title="map" marginheight="0" marginwidth="0" scrolling="no" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3907.6074035667625!2d78.16724361519488!3d11.651299745620193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3babf1da5d28c151%3A0xaee71a8f90bded04!2sJ%20R%20CAMBRIDGE%20SCHOOL!5e0!3m2!1sen!2sin!4v1675682790424!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> style="filter: grayscale(1) contrast(1.2) opacity(0.4);"></iframe>
