--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
                     viewBox="0 0 24 24">
                     <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                 </svg>
-                <span class="ml-3 text-xl">JRC School</span>
+                <span class="ml-3 text-xl">XYZ Company</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a class="mr-5 hover:text-gray-900" href="./index.html">Home</a>
