--- a/academics.html
+++ b/academics.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Academics</title>    
+    <title>Scheduler</title>    
 </head>
 <body>
     <header class="text-gray-600 body-font">
@@ -21,7 +21,7 @@
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a class="mr-5 hover:text-gray-900" href="./index.html">Home</a>
                 <a class="mr-5 hover:text-gray-900" href="./aboutus.html">About Us</a>
-                <a class="mr-5 hover:text-gray-900" href="./academics.html">Academics</a>
+                <a class="mr-5 hover:text-gray-900" href="./academics.html">Scheduler</a>
                 <a class="mr-5 hover:text-gray-900" href="./gallery.html">Gallery</a>
                 <a class="mr-5 hover:text-gray-900" href="./contactus.html">Contact Us</a>
             </nav>
