--- a/contactus.html
+++ b/contactus.html
@@ -22,7 +22,7 @@
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a class="mr-5 hover:text-gray-900" href="./index.html">Home</a>
                 <a class="mr-5 hover:text-gray-900" href="./aboutus.html">About Us</a>
-                <a class="mr-5 hover:text-gray-900" href="./academics.html">Academics</a>
+                <a class="mr-5 hover:text-gray-900" href="./academics.html">Scheduler</a>
                 <a class="mr-5 hover:text-gray-900" href="./gallery.html">Gallery</a>
                 <a class="mr-5 hover:text-gray-900" href="./contactus.html">Contact Us</a>
             </nav>
