--- a/academics.html
+++ b/academics.html
@@ -36,6 +36,22 @@
         </div>
     </header>
     <section class="text-gray-600 body-font">
+        <br>
+        <br>
+        <br>
+        <div class="text-center mb-20">
+            <h1 class="sm:text-3xl text-2xl font-medium text-center title-font text-gray-900 mb-4">Schedule a Session Now </h1>
+        </div>
+        <div style="height: 600px; width: 100%;">
+            <iframe
+                src="https://calendly.com/vishnusubramani8/30min"
+                width="100%"
+                height="100%"
+                frameborder="0"
+                scrolling="yes"
+                style="border: 1px solid #dddddd; border-radius: 8px;">
+            </iframe>
+        </div>
         <div class="container px-5 py-24 mx-auto">
           <div class="text-center mb-20">
             <h1 class="sm:text-3xl text-2xl font-medium text-center title-font text-gray-900 mb-4">Raw Denim Heirloom Man Braid</h1>
